--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>OpenSlides</title>
+        <title>e-sjednice</title>
         <base href="/" />
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta content="noindex" name="robots" />
